--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"/>
+      crossorigin="anonymous"
+    />
 
     <!-- icon -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Tharidi's POS system</title>
   </head>
   <body>
@@ -55,31 +57,29 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item"></li>
-              <a class="nav-link" href="/pages/customer-form.html">Customer</a>
+              <a class="nav-link" id="btn-home" onclick="forDashboard()"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/item-form.html">Item</a>
-            </li>
-            <li class="nav-item"></li>
-              <a class="nav-link" href="/pages/order-form.html">Order</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                role="button"
-                aria-expanded="false"
-                >Others</a
+              <a class="nav-link" id="btn-placeOrder" onclick="forOrder()"
+                >Place Order</a
               >
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/pages/orderDetail-form.html">Order-Details</a></li>
-                <li><a class="dropdown-item" href="/pages/viewAll-Customers.html">View Customers</a></li>
-                <li><a class="dropdown-item" href="/pages/viewAll-Item.html">View Items</a></li>
-              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-customer" onclick="OpenLoadFuntion()"
+                >Customer</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-Item" onclick="loadingMehtord()"
+                >Items</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-Order" onclick="loadingOrder()"
+                >Order</a
+              >
             </li>
           </ul>
           <!-- search -->
@@ -117,18 +117,18 @@
           </div>
         </a>
         <!-- Item -->
-       <a href="/pages/item-form.html">
-        <div class="col">
-          <button type="button" class="btn btn-outline-primary">
-            <div class="orderimg-area">
-              <i class="fa-solid fa-right-to-bracket"></i>
-              <h1>Items</h1>
-              <h3 id="lblAllOrder">000</h3>
-            </div>
-          </button>
-        </div>
-       </a>
-       <!-- Order -->
+        <a href="/pages/item-form.html">
+          <div class="col">
+            <button type="button" class="btn btn-outline-primary">
+              <div class="orderimg-area">
+                <i class="fa-solid fa-right-to-bracket"></i>
+                <h1>Items</h1>
+                <h3 id="lblAllOrder">000</h3>
+              </div>
+            </button>
+          </div>
+        </a>
+        <!-- Order -->
         <a href="/pages/order-form.html">
           <div class="col">
             <button type="button" class="btn btn-outline-primary">
@@ -142,17 +142,22 @@
         </a>
       </div>
     </div>
-<br><br><br>
+    <br /><br /><br />
     <!-- login in and out burron -->
     <div class="d-grid gap-2 col-6 mx-auto">
-      <button class="btn btn-primary" type="button">LogIn <i class="fa-solid fa-right-to-bracket"></i></button>
-      <button class="btn btn-primary" type="button">LogOut <i class="fa-solid fa-right-from-bracket"></i></button>
+      <button class="btn btn-primary" type="button">
+        LogIn <i class="fa-solid fa-right-to-bracket"></i>
+      </button>
+      <button class="btn btn-primary" type="button">
+        LogOut <i class="fa-solid fa-right-from-bracket"></i>
+      </button>
     </div>
 
     <!-- bootstrap.bundle.min.js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
