--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Order Place</title>
     <meta content="width=device-width, initial-scale=1,user-scalable = no" name="viewport">
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="assets/styles/style.css" rel="stylesheet">
     <link href="assets/styles/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kufam&family=Nosifer&family=Prompt&display=swap" rel="stylesheet">
@@ -88,7 +89,10 @@
                     <label for="txtPCustAddress" class="form-label">Address</label>
                     <input type="text" class="form-control " id="txtPCustAddress">
                 </div>
-              
+                <div class="mb-3 input-group-sm col-12">
+                    <label for="txtPCustSalary" class="form-label">Contact</label>
+                    <input type="text" class="form-control " id="txtPCustSalary">
+                </div>
             </div>
 
         </div>
@@ -195,7 +199,11 @@
                     <input type="text" class="form-control" id="txtCusAddress">
                     <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>
                 </div>
-               
+                <div class="mb-3 input-group-sm col-12 col-xl-6 col-xxl-6">
+                    <label for="txtCusSalary" class="form-label">Customer Salary</label>
+                    <input type="text" class="form-control" id="txtCusSalary">
+                    <p><small class="text-danger pl-1" id="lblcussalary"></small></p>
+                </div>
                 <button type="button" class="btn btn-primary col-8 col-xl-2 col-xxl-2 mx-3 mb-2" id="btn-save-customer">Save</button>
                 <button type="button" class="btn btn-success col-8 col-xl-2 col-xxl-2 mx-3 mb-2" id="btn-update-customer">Update</button>
                 <button type="button" class="btn btn-danger col-8 col-xl-2 col-xxl-2 mx-3 mb-2" id="btn-delete-customer">Delete</button>
@@ -225,7 +233,7 @@
                     <th>Customer NIC</th>
                     <th>Customer Name</th>
                     <th>Customer Address</th>
-                    <th>Salary</th>
+                    <th>Contact</th>
                 </tr>
                 </thead>
                 <tbody id="customerTable">
@@ -346,9 +354,12 @@
     </div>
 </section>
 
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script src="assets/jQuery/jquery-3.6.0.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- <script src="assets/jQuery/jquery-3.6.0.min.js"></script> -->
+ <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 <script src="assets/javaScript/script.js"></script>
 <script src="contraller/CustomerController.js"></script>
 <script src="contraller/ItemController.js"></script>
