--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>
                 </div>
                 <div class="mb-3 input-group-sm col-12 col-xl-6 col-xxl-6">
-                    <label for="txtCusSalary" class="form-label">Customer Salary</label>
+                    <label for="txtCusSalary" class="form-label">Contact</label>
                     <input type="text" class="form-control" id="txtCusSalary">
                     <p><small class="text-danger pl-1" id="lblcussalary"></small></p>
                 </div>
